--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,13 @@ before_install:
 install:
   - sudo apt-get -y install libqt5webkit5-dev qttools5-dev qtscript5-dev libdbusmenu-qt-dev libdbusmenu-qt5-dev libphonon-dev libphonon4qt5-dev libqca2-dev qttools5-dev-tools libphonon4qt5experimental4 
   - # source /opt/qt*/bin/qt*-env.sh
-  - sudo rm -f /usr/bin/qmake ; sudo ln -s /usr/lib/x86_64-linux-gnu/qt5/bin/qmake /usr/bin/qmake
 
 script:
-  - qmake CONFIG+=release PREFIX=/usr
+  - mkdir build
+  - cd build
+  - cmake . -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=/usr
   - make -j$(nproc)
-  - make INSTALL_ROOT=appdir -j$(nproc) install ; find appdir/
+  - make DESTDIR=appdir -j$(nproc) install ; find appdir/
   - wget -c -q "https://github.com/probonopd/linuxdeployqt/releases/download/continuous/linuxdeployqt-continuous-x86_64.AppImage"
   - chmod a+x linuxdeployqt*.AppImage
   - unset QTDIR; unset QT_PLUGIN_PATH ; unset LD_LIBRARY_PATH
