--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,9 @@ script:
   - chmod a+x linuxdeployqt*.AppImage
   - unset QTDIR; unset QT_PLUGIN_PATH ; unset LD_LIBRARY_PATH
   - export VERSION=$(git rev-parse --short HEAD) # linuxdeployqt uses this for naming the file
+  - sed -i -e 's|^Name=.*|Name=QuasselClient|g' appdir/usr/share/applications/quasselclient.desktop
+  - sed -i -e 's|^Name=.*|Name=Quassel|g' appdir/usr/share/applications/quassel.desktop
+  - sed -i -e 's|^Name=.*|Name=QuasselClient|g' appdir/usr/share/applications/quasselclient.desktop
   - ./linuxdeployqt*.AppImage ./appdir/usr/share/applications/*.desktop -bundle-non-qt-libs
   - ./linuxdeployqt*.AppImage ./appdir/usr/share/applications/*.desktop -appimage
 
