--- a/.travis.yml
+++ b/.travis.yml
@@ -23,16 +23,16 @@ script:
   - export VERSION=$(git rev-parse --short HEAD) # linuxdeployqt uses this for naming the file
   - sed -i -e 's|^Name=.*|Name=Quassel Client|g' appdir/usr/share/applications/quasselclient.desktop
   - sed -i -e 's|^Name=.*|Name=Quassel|g' appdir/usr/share/applications/quassel.desktop
-  - cp -r appdir/ quassel
-  - cp -r appdir/ client
+  - cp -r appdir/ quassel.AppDir
+  - cp -r appdir/ client.AppDir
   - # first, the normal quassel
-  - rm ./quassel/usr/share/applications/quasselclient.desktop ./quassel/usr/bin/{quasselcore,quasselclient}
-  - ./linuxdeployqt*.AppImage ./quassel/usr/share/applications/*.desktop -bundle-non-qt-libs
-  - ./linuxdeployqt*.AppImage ./quassel/usr/share/applications/*.desktop -appimage
+  - rm ./quassel.AppDir/usr/share/applications/quasselclient.desktop ./quassel.AppDir/usr/bin/{quasselcore,quasselclient}
+  - ./linuxdeployqt*.AppImage ./quassel.AppDir/usr/share/applications/*.desktop -bundle-non-qt-libs
+  - ./linuxdeployqt*.AppImage ./quassel.AppDir/usr/share/applications/*.desktop -appimage
   - # then, the quassel client
-  - rm ./quassel/usr/share/applications/quassel.desktop ./quassel/usr/bin/{quasselcore,quassel}
-  - ./linuxdeployqt*.AppImage ./quassel/usr/share/applications/*.desktop -bundle-non-qt-libs
-  - ./linuxdeployqt*.AppImage ./quassel/usr/share/applications/*.desktop -appimage
+  - rm ./client.AppDir.AppDir/usr/share/applications/quassel.desktop ./client.AppDir/usr/bin/{quasselcore,quassel}
+  - ./linuxdeployqt*.AppImage ./client.AppDir/usr/share/applications/*.desktop -bundle-non-qt-libs
+  - ./linuxdeployqt*.AppImage ./client.AppDir/usr/share/applications/*.desktop -appimage
   
 after_success:
   - find ./appdir -executable -type f -exec ldd {} \; | grep " => /usr" | cut -d " " -f 2-3 | sort | uniq
