--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
   - sudo apt-get update -qq
 
 install:
-  - sudo apt-get -y install qt59base qt59script qt59tools libdbusmenu-qt5-dev libphonon4qt5-dev libqca2-dev libphonon4qt5experimental4 
+  - sudo apt-get -y install qt59base qt59sql qt59script qt59tools libdbusmenu-qt5-dev libphonon4qt5-dev libqca2-dev libphonon4qt5experimental4 
   - source /opt/qt*/bin/qt*-env.sh
 
 script:
@@ -23,6 +23,8 @@ script:
   - export VERSION=$(git rev-parse --short HEAD) # linuxdeployqt uses this for naming the file
   - sed -i -e 's|^Name=.*|Name=Quassel Client|g' appdir/usr/share/applications/quasselclient.desktop
   - sed -i -e 's|^Name=.*|Name=Quassel|g' appdir/usr/share/applications/quassel.desktop
+  - cp -r /opt/qt*/plugins/sqldrivers ./quassel.AppDir/usr/plugins # Workaround for https://github.com/probonopd/linuxdeployqt/pull/152
+  - cp -r /opt/qt*/plugins/platforminputcontexts ./quassel.AppDir/usr/plugins # Workaround for https://github.com/probonopd/linuxdeployqt/pull/152
   - cp -r appdir/ quassel.AppDir
   - cp -r appdir/ client.AppDir
   - # first, the normal quassel
