--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
   - sudo apt-get update -qq
 
 install:
-  - sudo apt-get -y install qt59base qt59sql qt59script qt59tools libdbusmenu-qt5-dev libphonon4qt5-dev libqca2-dev libphonon4qt5experimental4 
+  - sudo apt-get -y install qt59base qt59script qt59tools libdbusmenu-qt5-dev libphonon4qt5-dev libqca2-dev libphonon4qt5experimental4 
   - source /opt/qt*/bin/qt*-env.sh
 
 script:
